--- a/telegram-bot/package.json
+++ b/telegram-bot/package.json
@@ -10,7 +10,6 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "devDependencies": {
     "@types/node": "^24.0.3",
     "@types/node-fetch": "^2.6.12",
@@ -18,8 +17,10 @@
     "typescript": "^5.8.3"
   },
   "dependencies": {
+    "date-fns": "^4.1.0",
     "dotenv": "^16.5.0",
     "node-fetch": "^2.7.0",
     "telegraf": "^4.16.3"
-  }
+  },
+  "description": ""
 }
